Added Unit Tests and refactoring done
Unit tests added.
Test database included to run Unit Tests on a seperate(test) environment
Refactoring done, and couple of comments added.

--- a/refactor-me/refactor-me.csproj
+++ b/refactor-me/refactor-me.csproj
@@ -105,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ProductOptionsController.cs" />
     <Compile Include="Repositories\ProductOptionRepository.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Database\IDbConnectionFactory.cs" />
