--- a/refactor-me.Tests/refactor-me.Tests.csproj
+++ b/refactor-me.Tests/refactor-me.Tests.csproj
@@ -79,7 +79,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -88,6 +90,7 @@
     <Compile Include="TestProductOptionsController.cs" />
     <Compile Include="TestProductsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AssemblyConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
