Database files added for TestDatabase
TestDatabase.mdf and .ldf files added
*.ldf rule removed from .gitignore

--- a/refactor-me.Tests/refactor-me.Tests.csproj
+++ b/refactor-me.Tests/refactor-me.Tests.csproj
@@ -98,7 +98,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Database\TestDatabase.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Database\TestDatabase_log.ldf">
+      <DependentUpon>TestDatabase.mdf</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
